<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Salon</string>
    <string name="logo">logo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="english">English</string>
    <string name="portuguese">Portuguese</string>
    <string name="splash_description">Stunning, astonishing, and beauty.</string>
    <string name="version">Version %s</string>
    <string name="choose_your">Choose your</string>
    <string name="Language">Language</string>
    <string name="choose_language_description">Lorem ipsum dolor sit amet,\n consectetur adip.</string>
    <string name="discover_your_favourite_glow"><font color='#D0A65B'>Discover</font> Your\nFavourite <font color='#D0A65B'>Glow</font></string>
    <string name="pre_login_description">Lorem ipsum dolor sit amet, consectetur\nadipiscing elit.</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_your_accout">Login to your account</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_question">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="dont_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_enter_email_address">Please enter email address</string>
    <string name="please_enter_valid_email_address">Please enter valid Email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="password_minimum_characters_validation">Please enter minimum 6 Characters</string>
    <string name="create_your_new_account">Create your new account</string>
    <string name="full_name_star">Full Name*</string>
    <string name="first_name_star">First Name*</string>
    <string name="last_name_star">Last Name*</string>
    <string name="email_address_star">Email Address*</string>
    <string name="phone_number">Phone Number</string>
    <string name="set_password_star">Set Password*</string>
    <string name="confirm_set_password_star">Confirm Set Password*</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="we_just_sent_a_verification_code_to">We just sent a verification code to</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="resend_otp_time">Resend OTP in <font color='#B80A13'>%dS</font></string>
    <string name="submit">Submit</string>
    <string name="invalid_otp_entered">Invalid OTP entered, please try again</string>
    <string name="congratulations_exclamation_mark">Congratulations!</string>
    <string name="your_account_has_been_created">Your account has been created!</string>
    <string name="thank_you_for_registering">Thank you for registering</string>
    <string name="go_to_login">Go to Login</string>
    <string name="please_enter_full_name">Please enter full name</string>
    <string name="please_enter_first_name">Please enter first name</string>
    <string name="please_enter_last_name">Please enter last name</string>
    <string name="please_enter_valid_phone_number">Please enter valid phone number</string>
    <string name="please_set_password">Please set a password</string>
    <string name="please_set_confirm_password">Please set confirm password</string>
    <string name="password_not_match">Password not match</string>
    <string name="please_enter_otp">Please enter OTP</string>
    <string name="thats_okay_it_happens">That’s okay, it happens! Enter your email\nand click on continue.</string>
    <string name="continue_string">Continue</string>
    <string name="back_to_login">Back to Login</string>
    <string name="reset">Reset</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_success">Reset Success!</string>
    <string name="your_password_has_been_changed">Your password has been changed!</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="profile">Profile</string>
    <string name="book_salon_services">Book Salon Services</string>
    <string name="orders">Orders</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="my_profile">My Profile</string>
    <string name="change_password">Change Password</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="cart">Cart</string>
    <string name="welcome">Welcome</string>
    <string name="hey">Hey, </string>
    <string name="search_here">Search here</string>
    <string name="services">Services</string>
    <string name="add">Add</string>
    <string name="sort_by">Sort By</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="ok">OK</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="service_time">%sHr</string>
    <string name="price_value">$%s</string>
    <string name="first_name_sup_star">First Name<font color="#B80A13">*</font></string>
    <string name="last_name_sup_star">Last Name<font color="#B80A13">*</font></string>
    <string name="full_name_sup_star">
Full Name
<font color="#B80A13">*</font>
</string>
    <string name="email_address_sup_star">
Email Address
<font color="#B80A13">*</font>
</string>
    <string name="phone_number_sup_star">
Phone Number
<font color="#B80A13">*</font>
</string>
    <string name="address1_sup_star" tools:ignore="Typos">
Address1
<font color="#B80A13">*</font>
</string>
    <string name="address2_sup_star">
Address2
<font color="#B80A13">*</font>
</string>
    <string name="address2">Address2</string>
    <string name="save">Save</string>
    <string name="old_password">Old Password</string>
    <string name="customer_care">Customer Care</string>
    <string name="customer_care_number">+244 900 000 000</string>
    <string name="please_enter_address1" tools:ignore="Typos">Please enter address1</string>
    <string name="please_enter_address2" tools:ignore="Typos">Please enter address2</string>
    <string name="go_to_dashboard">Go to Dashboard</string>
    <string name="select_profile_img">Select profile image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="setting">Setting</string>
    <string name="salon_needs_camera_permission_Enable_it_from_settings_question">Salon needs camera permission. Enable it from settings?</string>
    <string name="salon_needs_read_external_storage_permission_Enable_it_from_settings_question">Salon needs read external storage permission. Enable it from settings?</string>
    <string name="please_choose_from_a_different_folder">Please choose from a different folder</string>
    <string name="the_maximum_size_for_file_uploads_is_5mb">The maximum size for file uploads is 5MB</string>
    <string name="price_high_to_low">Price High to Low</string>
    <string name="price_low_to_high">Price Low to High</string>
    <string name="a_to_z">A to Z</string>
    <string name="z_to_A">Z to A</string>
    <string name="description">Description</string>
    <string name="terms_and_conditions_2">Terms &amp; Conditions</string>
    <string name="products">Products</string>
    <string name="i_dont_need_product">I Don’t Need Product</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="i_dont_need_food">I Don’t Need Food</string>
    <string name="foods">Foods</string>
    <string name="food">Food</string>
    <string name="what_is_contains">What is Contains</string>
    <string name="select_staff">Select Staff</string>
    <string name="staff">Staff</string>
    <string name="choose_any_one">Choose Any One</string>
    <string name="view_more">View More</string>
    <string name="book_schedule">Book Schedule</string>
    <string name="proceed_to_buy">Proceed To Buy</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_want_to_sign_out_question">Do you want to sign out?</string>
    <string name="do_you_want_to_delete_your_account_question">Do you want to delete your account?</string>
    <string name="total_review">( %d Review )</string>
    <string name="this_slot_is_not_available">This slot is not available</string>
    <string name="please_click_back_again_to_exit">Please click BACK again to exit</string>
    <string name="total_cart_value">Total Cart\nValue</string>
    <string name="my_cart">My Cart</string>
    <string name="product">Product</string>
    <string name="total">Total</string>
    <string name="past_date_not_allowed">Past date not allowed</string>
    <string name="updated_successfully">Updated Successfully</string>
    <string name="password_changed_successfully">Password changed Successfully</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="order_summary">Order Summary</string>
    <string name="place_order">Place Order</string>
    <string name="your_order_has_been_placed">Your Order Has Been Placed</string>
    <string name="order_id">Order ID</string>
    <string name="total_amount">Total Amount</string>
    <string name="view_details">View Details</string>
    <string name="my_order">My Order</string>
    <string name="order_details">Order Details</string>
    <string name="grand_total">Grand Total</string>
    <string name="congratulations">Congratulations</string>
    <string name="price_changed">Price changed</string>
    <string name="services_or_products_or_foods_are_unavailable">Services or Products or Foods are unavailable</string>
    <string name="your_account_is_deactivate">Your account is deactivated</string>
    <string name="coupon_applied">Coupon Applied</string>
    <string name="have_a_coupon_code_question">Have a coupon code?</string>
    <string name="enter_a_coupon_code">Enter a coupon code</string>
    <string name="apply">Apply</string>
    <string name="order_date">Order Date</string>
    <string name="buy_it_again">Buy it again</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="add_a_written_review">Add a written review</string>
    <string name="write_your_review_here">Write your review here......</string>
    <string name="your_account_is_inactive">Your account is inactive</string>
    <string name="more_item">+ %d More</string>
    <string name="please_enter_a_coupon_code">Please enter a coupon code</string>
    <string name="applied_coupon_price">(-) %s</string>
    <string name="order_cancelled">Order Cancelled</string>
    <string name="order_completed">Order Completed</string>
    <string name="do_you_want_to_cancel_this_order_question">Do you want to cancel this order?</string>
    <string name="staff_not_available">Staff not available</string>
    <string name="review_already_added">Review already added</string>
    <string name="please_write_something">Please write something</string>
    <string name="clear_all">Clear All</string>
    <string name="notifications">Notifications</string>
    <string name="date_time_concat">%1$s %2$s</string>
    <string name="no_notifications">No Notifications</string>
    <string name="notification_channel_orders_group_name">ORDERS</string>
    <string name="yes_i_confirm">Yes, I Confirm</string>
    <string name="don_t_cancel">Don\'t Cancel</string>
</resources>